finished setting for webpack

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="/logo512.png">
     <link rel="manifest" href="/manifest.json">
+
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 
 <body>
@@ -42,7 +44,7 @@
         }
     </script>
 
-    <script src="main.js"></script>
+    <script src="/static/js/main.js"></script>
 
     <!-- VK Widget -->
     <script type="text/javascript" src="https://vk.com/js/api/openapi.js?161"></script>
