Changed header logo

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <meta name="theme-color" content="#fe17bf" />
 
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="/logo512.png">
+    <link rel="apple-touch-icon" href="/images/logo/logo.png">
     <link rel="manifest" href="/manifest.json">
 
     <link rel="stylesheet" href="/static/css/style.css">
